welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: value lenght is not a member of Array[java.awt.Color]
for (i<-0 to Tab.lenght-1) {
                 ^Array1:14: error: value lenght is not a member of Array[java.awt.Color]
    for (i<-0 to Tab.lenght-1) {
                     ^